fixed burger button mobile position

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -153,7 +153,7 @@
   .header {
     z-index: 2;
     color: vars.$light-text;
-    width: 0%;
+    position: fixed;
 
     &__nav {
       height: 100vh;
@@ -206,7 +206,7 @@
 
       &__burger-button {
         position: absolute;
-        right: -4rem;
+        right: -95%;
         top: 0;
         font-size: 2rem;
       }
@@ -304,8 +304,8 @@
   .header {
     z-index: 2;
     color: vars.$light-text;
-    width: 0%;
-
+    position: fixed;
+    
     &__nav {
       height: 100vh;
       width: 100vw;
@@ -357,7 +357,7 @@
 
       &__burger-button {
         position: absolute;
-        right: -4rem;
+        right: -95%;
         top: 0;
         font-size: 2rem;
       }
